$Id: ChangeLog,v 1.111 2010/06/01 20:26:45 tho Exp $

ChangeLog file of LibU - http://www.koanlogic.com/libu/index.html

LibU x.y.z
	- [config] '#' can be escaped
	- [uri] add u_uri_is_absolute interface
	- [net] be more tolerant with missing setsockopt() (was causing bind()
			failures on some platforms)
	- [json] fix a memory leak in the indexing interface

LibU 2.2.0
	- [uri] fix excessively greedy match in IP-literal parser when there is no
	  path component; temp fix in URI builder to take care of IP-literal's
	- [uri] the URI parser set flags while decoding (e.g. tell if the host
	  is IP address or DNS name, or if it is an IP-literal and needs special
	  treatment when encoding.)
	- [daemon] fix compilation on uClinux
	- [buf] u_buf_shrink added
	- [net] fix u_connect_ex timeout re-computation on EINTR to take care
	  of Linux non-POSIX compliant behaviour; also check the updated timeout 
	  value after EINTR to catch corner case underflow conditions.
	- [net] disable u_net_nagle_off() on Minix
	- [array] #undef 'I' (imaginary unit) when including complex.h to avoid
	  name clash -- e.g. with openssl/rsa.h
	- [net] fix u_connect buggy behaviour on EINTR (reported by Mickael Auger)
	- [net] add _ex variants to socket creation interfaces to handle timeouted
	  operations
	- [net] ai_resolv fix: don't ask for AI_CANONNAME when hostname is NULL
	- [hmap] new discard policy U_HMAP_PCY_CUSTOM which allows user to specify
	  object comparison function via u_hmap_opts_set_policy_cmp() ; header
	  cleanup: remove object and policy struct's explicit layout; added
	  u_hmap_{easy_,}clear() ; missing u_hmap_opts_free() calls in test/
	- [test] fix conditional include logics that enables sandboxing
	- [str] don't rely on calloc for initialization of str object internal vars

LibU 2.1.0
	- fix bug in configure when handling the inline keyword support
	- Minix 3.8.1 port
	- fix configure to please OpenBSD when searching for [gs]etsockopt and
	  rusage structure