@@ -1,1 +1,1 @@
-2.3.0rc2
+2.3.0rc3
