@@ -144,6 +144,19 @@ __makl_no_bst ()
 }
 
 #
+# --no_b64
+#
+makl_args_def   \
+    "no_b64"    \
+    "" ""       \
+    "disable base64 codec module"
+
+__makl_no_b64 () 
+{ 
+    makl_set_var "NO_B64" ;
+}
+
+#
 # --no_json
 #
 makl_args_def   \
